added typing test

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 <body>
     <div id="siteMount">
         <div class="navbar">
-            <a class="nav" href="/">projects</a>
-            <a class="nav" href="/">contact</a>
-            <a class="nav" href="/">notebook</a>
+            <a class="nav" href="/index.html">home</a>
+            <a class="nav" href="/typings.html">thekeylab</a>
+            <a class="nav" href="/">projects (wip)</a>
+            <a class="nav" href="/">contact (wip)</a>
+            <a class="nav" href="/">notebook (wip)</a>
         </div>
         <div class="content">
             <div class="above-centered-text">thekevinlab / synchronous</div>
@@ -50,7 +52,7 @@
                             <line x1="7.5" y1="-7.5" x2="95.5119" y2="-7.5" transform="matrix(0.196204 -0.980563 0.977414 0.211335 154 103.01)" stroke="var(--secondary)" stroke-width="15" stroke-linecap="round"/>
                             <path d="M235.825 26.053L167.487 8.00963" stroke="var(--secondary)" stroke-width="15" stroke-linecap="round"/>
                             <ellipse rx="148.5" ry="108.5" transform="matrix(1 0 0 -1 149.5 183.5)" fill="var(--secondary)"/>
-                            <circle cx="96.5" cy="167.5" r="17.5" fill="var(--primary)"/>
+           S                 <circle cx="96.5" cy="167.5" r="17.5" fill="var(--primary)"/>
                             <circle cx="203.5" cy="166.5" r="17.5" fill="var(--primary)"/>
                             <path d="M96 216C117.6 237.536 183.215 237.13 204 216" stroke="var(--primary)" stroke-width="15" stroke-linecap="round"/>
                             <circle cx="37.5" cy="121.5" r="37.5" fill="var(--secondary)"/>
