change page title

--- a/typings.html
+++ b/typings.html
@@ -3,19 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>thekevinlab</title>
+    <title>thekevinlab / keylabs</title>
     <link rel="stylesheet" href="styles/typings.css">
     <link rel="icon" type="image/png" href="assets/icons/favicon.ico">
     <meta name="author" content="thekevinlab">
     <meta name="description" content="curator of chaos. ui/ux designer">
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="thekevinlab" />
+    <meta property="og:title" content="thekevinlab / keylabs" />
     <meta property="og:description" content="curator of chaos. ui/ux designer" />
     <meta property="og:image" content="https://thekevinlab.github.io/assets/banner.png" />
     <meta property="og:url" content="thekevinlab.github.io" />
     <meta property="og:site_name" content="thekevinlab" />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="thekevinlab" />
+    <meta property="twitter:title" content="thekevinlab / keylabs" />
     <meta property="twitter:url" content="thekevinlab.github.io" />
     <meta property="twitter:description" content="curator of chaos. backend dev and ui/ux designer." />
     <meta property="twitter:image" content="https://thekevinlab.github.io/assets/banner.png" />
