moved keylabs to separate github pages site

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <div id="siteMount">
         <div class="navbar">
             <a class="nav" href="/index.html">home</a>
-            <a class="nav" href="/typings.html">thekeylab</a>
-            <a class="nav" href="/">projects (wip)</a>
+            <a class="nav" href="/">projects (coming soon!)</a>
             <a class="nav" href="/">contact (wip)</a>
             <a class="nav" href="/">notebook (wip)</a>
         </div>
