--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div id="siteMount">
         <div class="navbar">
             <a class="nav" href="/index.html">home</a>
+            <a class="nav" href="/keylabs">keylabs</a>
             <a class="nav" href="/">projects (coming soon!)</a>
             <a class="nav" href="/">contact (wip)</a>
             <a class="nav" href="/">notebook (wip)</a>
