feat: animated the / for the title

--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
         <div class="navbar">
             <a class="nav" href="/index.html">home</a>
             <a class="nav" href="/keylabs">keylabs</a>
-            <a class="nav" href="/">projects (coming soon!)</a>
+            <!-- <a class="nav" href="/">projects (coming soon!)</a>
             <a class="nav" href="/">contact (wip)</a>
-            <a class="nav" href="/">notebook (wip)</a>
+            <a class="nav" href="/">notebook (wip)</a> -->
         </div>
         <div class="content">
-            <div class="above-centered-text">thekevinlab / synchronous</div>
+            <div class="above-centered-text">
+                <div class="above-centered-text-left">thekevinlab</div>
+                <div class="above-centered-text-mid">/</div>
+                <div class="above-centered-text-right">synchronous</div>
+            </div>
             <div class="top-header"> <!-- this is a really dumb way of doing it but it works ig-->
                 <div class="centered-text">creating the future.</div>
                 <svg class="centered-logo" viewBox="0 50 900 500" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -78,7 +82,7 @@
                 </a>
             </div>
         </div>
-        <div class="footer">hey there, this project is still in its early stages. expect some pages might look or act weird.</div>
+        <!-- <div class="footer">hey there, this project is still in its early stages. expect some pages might look or act weird.</div> -->
     </div>
 
     <script src="scripts/app.js"></script>
