chore: update header

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="top-header">
                 <!-- this is a really dumb way of doing it but it works ig-->
                 <div class="left-wrapper">
-                    <div class="heading">Hey, I'm Kevin.</div>
+                    <div class="heading">Curator of chaos.</div>
                     <div class="title">Backend Developer.</div>
                     <div class="title2">UI/UX Designer.</div>
                 </div>
