--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <!-- TODO: add little svg graphics with keyboards and cameras and stuff -->
+<!-- TODO: convert keyframes to gsap animations -->
 
 <body>
     <div id="siteMount">
@@ -30,6 +31,7 @@
             <a class="nav" href="/keylabs">keylabs</a>
         </nav> -->
         <main class="content">
+            <!-- <div class="header-container"></div> -->
             <div class="header-container">
                 <!-- this is a really dumb way of doing it but it works ig-->
                 <section class="header-wrapper">
@@ -40,7 +42,7 @@
                     </section>
                     <div class="middle-line"></div>
                     <section class="right-wrapper">
-                        <svg class="logo" viewBox="0 -250 889 1620" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="logo" viewBox="0 -405 889 1620" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g class="logo-left">
                                 <path class="left-path" d="M5.5 252L234 725L403 641L574 160.5L485 5L310.5 299L5.5 252Z"
                                     fill="url(#leftgradient)" stroke-width="5" stroke-linejoin="round" />
@@ -72,6 +74,8 @@
                     <path d="M1.5 11.5L14 21.5 25.3 11.5" class="a2" stroke="var(--light-blueish)" stroke-width="0.2em"></path>
                     <path d="M1.5 1.5L14 11.5 25.3 1.5" class="a3" stroke="var(--light-aquamarine)" stroke-width="0.2em"></path>
                 </svg>
+            </div>
+            <div class="header-container">
             </div>
             <!-- <div class="below-text hidden">Backend developer and UI/UX designer.</div>
             <div class="icebreakers-text hidden">keeb enthusiast. avid photographer and absolute nutcase.</div>
@@ -119,14 +123,16 @@
                 </a>
             </div> -->
         </main>
+        <!-- <div class="noise"></div> -->
         <!-- <div class="footer">hey there, this project is still in its early stages. expect some pages might look or act weird.</div> -->
     </div>
 
-    <script src="scripts/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollToPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/MotionPathPlugin.min.js"></script>
+
+    <script src="scripts/app.js"></script>
 </body>
 
 </html>
